close toast with button done

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
           <p>Notification</p>
           <span id="closeNotification" class="close-notification-span">
             <label>Just Now</label>
-            <img src="/assets/img/CloseIcon.png" />
+            <img id="closeNotification" src="/assets/img/CloseIcon.png" />
           </span>
         </div>
       </div>
