working leave-details-side view

--- a/index.html
+++ b/index.html
@@ -409,6 +409,160 @@
             </li>
           </ul>
         </div>
+        <div
+          id="leaveDetailsComponent"
+          style="display: none"
+          class="leave-deatils-component"
+        >
+          <div class="leave-details-header">
+            <h2>Leave Details</h2>
+            <img src="/assets/img/CloseIcon.png" />
+          </div>
+          <div class="user-details-card">
+            <div class="user-details-component">
+              <img src="/assets/img/User3Avatar.png" />
+              <div class="user-info-component">
+                <div class="user-info-row">
+                  <label class="info-key">NAME</label>
+                  <label class="info-value" id="userName"
+                    >Nur Fariha binti Maslan</label
+                  >
+                </div>
+                <div class="user-info-row">
+                  <label class="info-key">LEAVE TYPE</label>
+                  <label class="info-value" id="leaveType"
+                    >Hospital Leave</label
+                  >
+                </div>
+                <div class="user-info-row">
+                  <label class="info-key">START DATE</label>
+                  <label class="info-value" id="startDate"
+                    >21 Apr, 2023 09:00 AM</label
+                  >
+                </div>
+                <div class="user-info-row">
+                  <label class="info-key">END DATE</label>
+                  <label class="info-value" id="endDate"
+                    >24 Apr, 2023 18:00 PM</label
+                  >
+                </div>
+                <div class="user-info-row">
+                  <label class="info-key">ATTACHMENT</label>
+                  <label class="info-value attachment-value" id="attechment">
+                    <img src="/assets/img/AttachmentIcon.svg" />
+                    Medical Certificate
+                  </label>
+                </div>
+                <div class="user-info-row">
+                  <label class="info-key">REASON</label>
+                  <label class="info-value" id="reason">Out of sorts</label>
+                </div>
+              </div>
+            </div>
+            <div class="leave-days-info-component">
+              <p class="leave-start-end-date">03 March 2023 - 06 march 2023</p>
+              <div class="leave-hours-and-table-controller-row">
+                <p class="total-hours-text">TOTAL HOURS: 16</p>
+                <span
+                  class="table-visibility-controller"
+                  id="toggleTableButton"
+                >
+                  <label id="toggleTableLabel" class="toggle-table-label"
+                    >Expand</label
+                  >
+                  <img src="/assets/img/DownIcon.svg" />
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="notify-header">
+            <h2>Notifications</h2>
+            <div class="mark-all-box">
+              <label>Mark all as read</label>
+              <img src="/assets/img/CheckMark.svg" />
+            </div>
+          </div>
+          <ul class="notifications-list">
+            <li class="notifications-list-item">
+              <div class="notification-user-avatar active">
+                <img src="/assets/img/User2Avatar.png" />
+              </div>
+              <div class="notifications-content-component">
+                <p class="notification-message">
+                  <strong class="user-name">Mark Jacobs</strong>has applied for
+                  leave and is currently awaiting approval.
+                </p>
+
+                <label class="notification-time">Today at 09:42 AM</label>
+              </div>
+            </li>
+            <li class="notifications-list-item">
+              <div class="notification-user-avatar active">
+                <img src="/assets/img/User3Avatar.png" />
+              </div>
+              <div class="notifications-content-component">
+                <p class="notification-message">
+                  <strong class="user-name">Mark Jacobs</strong>has applied for
+                  leave and is currently awaiting approval.
+                </p>
+
+                <label class="notification-time">Today at 09:42 AM</label>
+              </div>
+            </li>
+            <li class="notifications-list-item">
+              <div class="notification-user-avatar active">
+                <img src="/assets/img/User1Avatar.svg" />
+              </div>
+              <div class="notifications-content-component">
+                <p class="notification-message">
+                  <strong class="user-name">Mark Jacobs</strong>has applied for
+                  leave and is currently awaiting approval.
+                </p>
+
+                <label class="notification-time">Today at 09:42 AM</label>
+              </div>
+            </li>
+            <li class="notifications-list-item">
+              <div class="notification-user-avatar">
+                <img src="/assets/img/User2Avatar.png" />
+              </div>
+              <div class="notifications-content-component">
+                <p class="notification-message">
+                  <strong class="user-name">Mark Jacobs</strong>has applied for
+                  leave and is currently awaiting approval.
+                </p>
+
+                <label class="notification-time">Today at 09:42 AM</label>
+              </div>
+            </li>
+            <li class="notifications-list-item">
+              <div class="notification-user-avatar">
+                <img src="/assets/img/User3Avatar.png" />
+              </div>
+              <div class="notifications-content-component">
+                <p class="notification-message">
+                  <strong class="user-name">Mark Jacobs</strong>has applied for
+                  leave and is currently awaiting approval.
+                </p>
+
+                <label class="notification-time">Today at 09:42 AM</label>
+              </div>
+            </li>
+            <li class="notifications-list-item">
+              <div class="notification-user-avatar">
+                <img src="/assets/img/User1Avatar.svg" />
+              </div>
+              <div class="notifications-content-component">
+                <p class="notification-message">
+                  <strong class="user-name">Mark Jacobs</strong>has applied for
+                  leave and is currently awaiting approval.
+                </p>
+
+                <label class="notification-time">Today at 09:42 AM</label>
+              </div>
+            </li>
+          </ul> -->
+        </div>
       </main>
     </div>
     <div
