leave-details: user-info-card done

--- a/index.html
+++ b/index.html
@@ -409,11 +409,7 @@
             </li>
           </ul>
         </div>
-        <div
-          id="leaveDetailsComponent"
-          style="display: none"
-          class="leave-deatils-component"
-        >
+        <div id="leaveDetailsComponent" class="leave-deatils-component">
           <div class="leave-details-header">
             <h2>Leave Details</h2>
             <img src="/assets/img/CloseIcon.png" />
@@ -473,6 +469,70 @@
                   <img src="/assets/img/DownIcon.svg" />
                 </span>
               </div>
+            </div>
+            <div class="leave-days-table-component">
+              <table class="leave-days-table">
+                <thead>
+                  <tr class="table-head">
+                    <td class="first-col">
+                      <label>Start Date</label>
+                      <img src="/assets/img/SortIcon.svg" />
+                    </td>
+                    <td>
+                      <label>DAY(S)</label>
+                    </td>
+                    <td class="last-col">
+                      <label>HOURS</label>
+                    </td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="table-body-row">
+                    <td>
+                      <label>21 Apr 2023</label>
+                    </td>
+                    <td>
+                      <label>Friday</label>
+                    </td>
+                    <td>
+                      <label>8</label>
+                    </td>
+                  </tr>
+                  <tr class="table-off-days-body-row">
+                    <td>
+                      <label>21 Apr 2023</label>
+                    </td>
+                    <td>
+                      <label>Friday</label>
+                    </td>
+                    <td>
+                      <label>8</label>
+                    </td>
+                  </tr>
+                  <tr class="table-off-days-body-row">
+                    <td>
+                      <label>21 Apr 2023</label>
+                    </td>
+                    <td>
+                      <label>Friday</label>
+                    </td>
+                    <td>
+                      <label>8</label>
+                    </td>
+                  </tr>
+                  <tr class="table-body-row">
+                    <td>
+                      <label>21 Apr 2023</label>
+                    </td>
+                    <td>
+                      <label>Friday</label>
+                    </td>
+                    <td>
+                      <label>8</label>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
           <!-- <div class="notify-header">
