approval level timeline created

--- a/index.html
+++ b/index.html
@@ -409,11 +409,7 @@
             </li>
           </ul>
         </div>
-        <div
-          id="leaveDetailsComponent"
-          style="display: none"
-          class="leave-deatils-component"
-        >
+        <div id="leaveDetailsComponent" class="leave-deatils-component">
           <div class="leave-details-header">
             <h2>Leave Details</h2>
             <img src="/assets/img/CloseIcon.png" />
@@ -539,11 +535,73 @@
               </table>
             </div>
           </div>
-          <div class="leave-details-header">
+          <div class="approval-level-header">
             <h2>Approval Level</h2>
           </div>
-          <div class="user-details-card">
-            <div class="user-details-component">
+          <div class="approval-level-card">
+            <div class="approval-level-1-row">
+              <span class="approval-indicator approval-pending"></span>
+              <img src="/assets/img/User1Avatar.svg" class="approver-avatar" />
+              <div class="approver-info-component">
+                <div class="approver-info-row">
+                  <label class="approver-info-key">NAME</label>
+                  <label class="approver-info-value">Simon Minter</label>
+                </div>
+                <div class="approver-info-row">
+                  <label class="approver-info-key">DESIGNATION</label>
+                  <label class="approver-info-value">Human Resources</label>
+                </div>
+                <div class="approver-info-row">
+                  <label class="approver-info-key">STATUS</label>
+                  <label class="approver-info-value pending">
+                    Pending Approvel
+                  </label>
+                </div>
+              </div>
+              <span class="timeline-connect-line"></span>
+            </div>
+            <div class="approval-level-2-row">
+              <span class="approval-indicator approval-pending"></span>
+              <img src="/assets/img/User2Avatar.png" class="approver-avatar" />
+              <div class="approver-info-component">
+                <div class="approver-info-row">
+                  <label class="approver-info-key">NAME</label>
+                  <label class="approver-info-value">Simon Minter</label>
+                </div>
+                <div class="approver-info-row">
+                  <label class="approver-info-key">DESIGNATION</label>
+                  <label class="approver-info-value">Human Resources</label>
+                </div>
+                <div class="approver-info-row">
+                  <label class="approver-info-key">STATUS</label>
+                  <label class="approver-info-value pending">
+                    Pending Approvel
+                  </label>
+                </div>
+              </div>
+              <span class="timeline-connect-line"></span>
+            </div>
+            <div class="approval-level-3-row">
+              <span class="approval-indicator approval-pending"></span>
+              <img src="/assets/img/User3Avatar.png" class="approver-avatar" />
+              <div class="approver-info-component">
+                <div class="approver-info-row">
+                  <label class="approver-info-key">NAME</label>
+                  <label class="approver-info-value">Simon Minter</label>
+                </div>
+                <div class="approver-info-row">
+                  <label class="approver-info-key">DESIGNATION</label>
+                  <label class="approver-info-value">Human Resources</label>
+                </div>
+                <div class="approver-info-row">
+                  <label class="approver-info-key">STATUS</label>
+                  <label class="approver-info-value pending">
+                    Pending Approvel
+                  </label>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="user-details-component">
               <img src="/assets/img/User3Avatar.png" />
               <div class="user-info-component">
                 <div class="user-info-row">
@@ -661,7 +719,7 @@
                   </tr>
                 </tbody>
               </table>
-            </div>
+            </div> -->
           </div>
         </div>
       </main>
