approval level timeline done

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
               <span class="timeline-connect-line"></span>
             </div>
             <div class="approval-level-3-row">
-              <span class="approval-indicator approval-pending"></span>
+              <span class="approval-indicator approval-approved"></span>
               <img src="/assets/img/User3Avatar.png" class="approver-avatar" />
               <div class="approver-info-component">
                 <div class="approver-info-row">
@@ -595,131 +595,12 @@
                 </div>
                 <div class="approver-info-row">
                   <label class="approver-info-key">STATUS</label>
-                  <label class="approver-info-value pending">
-                    Pending Approvel
+                  <label class="approver-info-value">
+                    03 Mar 2023, 17:30 AM
                   </label>
                 </div>
               </div>
             </div>
-            <!-- <div class="user-details-component">
-              <img src="/assets/img/User3Avatar.png" />
-              <div class="user-info-component">
-                <div class="user-info-row">
-                  <label class="info-key">NAME</label>
-                  <label class="info-value" id="userName"
-                    >Nur Fariha binti Maslan</label
-                  >
-                </div>
-                <div class="user-info-row">
-                  <label class="info-key">LEAVE TYPE</label>
-                  <label class="info-value" id="leaveType"
-                    >Hospital Leave</label
-                  >
-                </div>
-                <div class="user-info-row">
-                  <label class="info-key">START DATE</label>
-                  <label class="info-value" id="startDate"
-                    >21 Apr, 2023 09:00 AM</label
-                  >
-                </div>
-                <div class="user-info-row">
-                  <label class="info-key">END DATE</label>
-                  <label class="info-value" id="endDate"
-                    >24 Apr, 2023 18:00 PM</label
-                  >
-                </div>
-                <div class="user-info-row">
-                  <label class="info-key">ATTACHMENT</label>
-                  <label class="info-value attachment-value" id="attechment">
-                    <img src="/assets/img/AttachmentIcon.svg" />
-                    Medical Certificate
-                  </label>
-                </div>
-                <div class="user-info-row">
-                  <label class="info-key">REASON</label>
-                  <label class="info-value" id="reason">Out of sorts</label>
-                </div>
-              </div>
-            </div>
-            <div class="leave-days-info-component">
-              <p class="leave-start-end-date">03 March 2023 - 06 march 2023</p>
-              <div class="leave-hours-and-table-controller-row">
-                <p class="total-hours-text">TOTAL HOURS: 16</p>
-                <span
-                  class="table-visibility-controller"
-                  id="toggleTableButton"
-                >
-                  <label id="toggleTableLabel" class="toggle-table-label"
-                    >Expand</label
-                  >
-                  <img src="/assets/img/DownIcon.svg" />
-                </span>
-              </div>
-            </div>
-            <div class="leave-days-table-component">
-              <table class="leave-days-table">
-                <thead>
-                  <tr class="table-head">
-                    <td class="first-col">
-                      <label>Start Date</label>
-                      <img src="/assets/img/SortIcon.svg" />
-                    </td>
-                    <td>
-                      <label>DAY(S)</label>
-                    </td>
-                    <td class="last-col">
-                      <label>HOURS</label>
-                    </td>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr class="table-body-row">
-                    <td>
-                      <label>21 Apr 2023</label>
-                    </td>
-                    <td>
-                      <label>Friday</label>
-                    </td>
-                    <td>
-                      <label>8</label>
-                    </td>
-                  </tr>
-                  <tr class="table-off-days-body-row">
-                    <td>
-                      <label>21 Apr 2023</label>
-                    </td>
-                    <td>
-                      <label>Friday</label>
-                    </td>
-                    <td>
-                      <label>8</label>
-                    </td>
-                  </tr>
-                  <tr class="table-off-days-body-row">
-                    <td>
-                      <label>21 Apr 2023</label>
-                    </td>
-                    <td>
-                      <label>Friday</label>
-                    </td>
-                    <td>
-                      <label>8</label>
-                    </td>
-                  </tr>
-                  <tr class="table-body-row">
-                    <td>
-                      <label>21 Apr 2023</label>
-                    </td>
-                    <td>
-                      <label>Friday</label>
-                    </td>
-                    <td>
-                      <label>8</label>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div> -->
           </div>
         </div>
       </main>
