leave-details done

--- a/index.html
+++ b/index.html
@@ -602,6 +602,20 @@
               </div>
             </div>
           </div>
+          <div class="approval-level-header">
+            <h2>Comments</h2>
+          </div>
+          <div class="comments-box-card">
+            <textarea rows="5" class="comments-box"></textarea>
+          </div>
+          <div class="leave-request-actions-row">
+            <botton class="action-button reject" id="rejectLeaveRequest"
+              >REJECT</botton
+            >
+            <botton class="action-button approve" id="approveLeaveRequest"
+              >APPROVE</botton
+            >
+          </div>
         </div>
       </main>
     </div>
