leave details close done

--- a/index.html
+++ b/index.html
@@ -409,10 +409,14 @@
             </li>
           </ul>
         </div>
-        <div id="leaveDetailsComponent" class="leave-deatils-component">
+        <div
+          id="leaveDetailsComponent"
+          style="display: none"
+          class="leave-deatils-component"
+        >
           <div class="leave-details-header">
             <h2>Leave Details</h2>
-            <img src="/assets/img/CloseIcon.png" />
+            <img id="leaveDetailCloseIcon" src="/assets/img/CloseIcon.png" />
           </div>
           <div class="user-details-card">
             <div class="user-details-component">
